# FMSynthEnsembleV3

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  README_ja.md
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: build.yml
doc/: README.md  architecture.md  design_concurrency.md  design_csm_frame.md  design_effect.md  design_midi_message.md  design_midi_panel.md  design_rhythm.md  design_voice_allocation.md  design_volume_controller.md  midi_implementation_chart.md  spec_midi_panel.md  spec_opn.md  system_spec.md
doc/datasheet/: README.md
doc/domain/: README.md  domain_app.md  domain_drivers.md  domain_midi.md  domain_platform.md  domain_synth.md
doc/schematics/: README.md
src/app/: config.h  csm_frame_task.cpp  csm_frame_task.h  csm_ipc.cpp  csm_ipc.h  debugger.cpp  debugger.h  debugger_task.cpp  debugger_task.h  main.cpp  midi_engine_task.cpp  midi_engine_task.h  midi_ipc.cpp  midi_ipc.h  midi_panel_task.cpp  midi_panel_task.h  sample_task.cpp  sample_task.h  task_config.h  usb_midi_task.cpp  usb_midi_task.h
src/drivers/: CMakeLists.txt
src/drivers/fm/: CMakeLists.txt  OpnBase.cpp  OpnBase.h  YM2203.h  YM2608.cpp  YM2608.h
src/drivers/fm/opn_piolib/: CMakeLists.txt
src/drivers/fm/opn_piolib/doc/: piolib_spec.md
src/drivers/fm/opn_piolib/include/: opn_piolib.h
src/drivers/fm/opn_piolib/src/: fm_bus.c  fm_bus.pio  fm_bus_internal.h  fm_opn.c
src/drivers/fm/tone/: fm_tl_trim.inc  tone_table.inc
src/drivers/midi_panel/: CMakeLists.txt  IMidiPanelDriver.h  MidiPanelDriverFactory.cpp  MidiPanelDriverFactory.h  NullMidiPanelDriver.h  OpnMidiPanelDriver.cpp  OpnMidiPanelDriver.h
src/drivers/storage/: CMakeLists.txt  hw_config.c
src/drivers/usb/: CMakeLists.txt  tusb_config.h  usb_descriptors.cpp
src/midi/: CMakeLists.txt  MidiMessage.h  MidiParser.cpp  MidiParser.h  MidiRoutingPolicy.cpp  MidiRoutingPolicy.h
src/platform/: CMakeLists.txt  FreeRTOSConfig.h  freertos_hooks.cpp  init.cpp  init.h  isr.cpp  isr.h  volume_controller.cpp  volume_controller.h
src/synth/: CMakeLists.txt  MidiFactory.cpp  MidiFactory.h  MidiPanelController.cpp  MidiPanelController.h  MidiProcessor.cpp  MidiProcessor.h  VoiceLimits.h
src/synth/channel/: MidiChannel.cpp  MidiChannel.h  NoteChannel.cpp  NoteChannel.h  RhythmChannel.cpp  RhythmChannel.h
src/synth/voice/: CsmVoice.cpp  CsmVoice.h  IVoiceReclaimable.h  NoteVoice.cpp  NoteVoice.h  Voice.cpp  Voice.h  VoiceAllocator.cpp  VoiceAllocator.h
tools/fm_level_measurement/: README.md  analyze_recording.py  generate_measurement_midi.py
tools/gen_tone_table/: README.md  generate_tone_table.py
